[tool.poetry]
name = "SimMarketBot"
version = "0.1.0"
description = "Telegram Bot for selling SIM cards"
authors = ["ZhymabekRoman"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiogram = "2.13"
icecream = "2.1.0"
aioqiwi = "1.1.5"
sqlalchemy_mixins = "1.4"
requests = "2.25.1"
aioify = "0.4.0"
python-Levenshtein = "0.12.2"
fuzzywuzzy = "0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
